trunk/lispbuilder-opengl/build/gl_1_1.h



/*
 * Datatypes
 */
typedef unsigned int	GLenum;

typedef unsigned char	GLboolean;

typedef void		GLvoid;

typedef short		GLshort;	/* 2-byte signed */

typedef int		GLint;		/* 4-byte signed */

typedef unsigned char	GLubyte;	/* 1-byte unsigned */

typedef unsigned short	GLushort;	/* 2-byte unsigned */

typedef unsigned int	GLuint;		/* 4-byte unsigned */

typedef int		GLsizei;	/* 4-byte signed */

typedef float		GLfloat;	/* single precision float */

typedef float		GLclampf;	/* single precision float in [0,1] */

typedef double		GLdouble;	/* double precision float */

GLAPI void GLAPIENTRY glRasterPos3f( GLfloat x, GLfloat y, GLfloat z );

GLAPI void GLAPIENTRY glRasterPos3i( GLint x, GLint y, GLint z );

GLAPI void GLAPIENTRY glRasterPos3s( GLshort x, GLshort y, GLshort z );


GLAPI void GLAPIENTRY glRasterPos4d( GLdouble x, GLdouble y, GLdouble z, GLdouble w );

GLAPI void GLAPIENTRY glRasterPos4f( GLfloat x, GLfloat y, GLfloat z, GLfloat w );

GLAPI void GLAPIENTRY glRasterPos4i( GLint x, GLint y, GLint z, GLint w );

GLAPI void GLAPIENTRY glRasterPos4s( GLshort x, GLshort y, GLshort z, GLshort w );


GLAPI void GLAPIENTRY glRasterPos2dv( const GLdouble *v );

GLAPI void GLAPIENTRY glRasterPos2fv( const GLfloat *v );

GLAPI void GLAPIENTRY glRasterPos2iv( const GLint *v );

GLAPI void GLAPIENTRY glRasterPos2sv( const GLshort *v );


GLAPI void GLAPIENTRY glRasterPos3dv( const GLdouble *v );

GLAPI void GLAPIENTRY glRasterPos3fv( const GLfloat *v );

GLAPI void GLAPIENTRY glRasterPos3iv( const GLint *v );

GLAPI void GLAPIENTRY glRasterPos3sv( const GLshort *v );


GLAPI void GLAPIENTRY glRasterPos4dv( const GLdouble *v );

GLAPI void GLAPIENTRY glRasterPos4fv( const GLfloat *v );

GLAPI void GLAPIENTRY glRasterPos4iv( const GLint *v );

GLAPI void GLAPIENTRY glRasterPos4sv( const GLshort *v );



GLAPI void GLAPIENTRY glRectd( GLdouble x1, GLdouble y1, GLdouble x2, GLdouble y2 );

GLAPI void GLAPIENTRY glRectf( GLfloat x1, GLfloat y1, GLfloat x2, GLfloat y2 );

GLAPI void GLAPIENTRY glRecti( GLint x1, GLint y1, GLint x2, GLint y2 );

GLAPI void GLAPIENTRY glRects( GLshort x1, GLshort y1, GLshort x2, GLshort y2 );



GLAPI void GLAPIENTRY glRectdv( const GLdouble *v1, const GLdouble *v2 );

GLAPI void GLAPIENTRY glRectfv( const GLfloat *v1, const GLfloat *v2 );

GLAPI void GLAPIENTRY glRectiv( const GLint *v1, const GLint *v2 );

GLAPI void GLAPIENTRY glRectsv( const GLshort *v1, const GLshort *v2 );



/*
 * Vertex Arrays  (1.1)
 */

GLAPI void GLAPIENTRY glVertexPointer( GLint size, GLenum type,
                                       GLsizei stride, const GLvoid *ptr );


GLAPI void GLAPIENTRY glNormalPointer( GLenum type, GLsizei stride,
                                       const GLvoid *ptr );


GLAPI void GLAPIENTRY glColorPointer( GLint size, GLenum type,
                                      GLsizei stride, const GLvoid *ptr );


GLAPI void GLAPIENTRY glIndexPointer( GLenum type, GLsizei stride,
                                      const GLvoid *ptr );


GLAPI void GLAPIENTRY glTexCoordPointer( GLint size, GLenum type,
                                         GLsizei stride, const GLvoid *ptr );


GLAPI void GLAPIENTRY glEdgeFlagPointer( GLsizei stride, const GLvoid *ptr );


GLAPI void GLAPIENTRY glGetPointerv( GLenum pname, GLvoid **params );


GLAPI void GLAPIENTRY glArrayElement( GLint i );


GLAPI void GLAPIENTRY glDrawArrays( GLenum mode, GLint first, GLsizei count );


GLAPI void GLAPIENTRY glDrawElements( GLenum mode, GLsizei count,
                                      GLenum type, const GLvoid *indices );


GLAPI void GLAPIENTRY glInterleavedArrays( GLenum format, GLsizei stride,
                                           const GLvoid *pointer );


/*
 * Lighting
 */

GLAPI void GLAPIENTRY glShadeModel( GLenum mode );


GLAPI void GLAPIENTRY glLightf( GLenum light, GLenum pname, GLfloat param );

GLAPI void GLAPIENTRY glLighti( GLenum light, GLenum pname, GLint param );

GLAPI void GLAPIENTRY glLightfv( GLenum light, GLenum pname,
                                 const GLfloat *params );

GLAPI void GLAPIENTRY glLightiv( GLenum light, GLenum pname,
                                 const GLint *params );


GLAPI void GLAPIENTRY glGetLightfv( GLenum light, GLenum pname,
                                    GLfloat *params );

GLAPI void GLAPIENTRY glGetLightiv( GLenum light, GLenum pname,
                                    GLint *params );


GLAPI void GLAPIENTRY glLightModelf( GLenum pname, GLfloat param );

GLAPI void GLAPIENTRY glLightModeli( GLenum pname, GLint param );

GLAPI void GLAPIENTRY glLightModelfv( GLenum pname, const GLfloat *params );

GLAPI void GLAPIENTRY glLightModeliv( GLenum pname, const GLint *params );


GLAPI void GLAPIENTRY glMaterialf( GLenum face, GLenum pname, GLfloat param );

GLAPI void GLAPIENTRY glMateriali( GLenum face, GLenum pname, GLint param );

GLAPI void GLAPIENTRY glMaterialfv( GLenum face, GLenum pname, const GLfloat *params );

GLAPI void GLAPIENTRY glMaterialiv( GLenum face, GLenum pname, const GLint *params );


GLAPI void GLAPIENTRY glGetMaterialfv( GLenum face, GLenum pname, GLfloat *params );

GLAPI void GLAPIENTRY glGetMaterialiv( GLenum face, GLenum pname, GLint *params );


GLAPI void GLAPIENTRY glColorMaterial( GLenum face, GLenum mode );



/*
 * Raster functions
 */

GLAPI void GLAPIENTRY glPixelZoom( GLfloat xfactor, GLfloat yfactor );


GLAPI void GLAPIENTRY glPixelStoref( GLenum pname, GLfloat param );

GLAPI void GLAPIENTRY glPixelStorei( GLenum pname, GLint param );


GLAPI void GLAPIENTRY glPixelTransferf( GLenum pname, GLfloat param );

GLAPI void GLAPIENTRY glPixelTransferi( GLenum pname, GLint param );


GLAPI void GLAPIENTRY glPixelMapfv( GLenum map, GLsizei mapsize,
                                    const GLfloat *values );

GLAPI void GLAPIENTRY glPixelMapuiv( GLenum map, GLsizei mapsize,
                                     const GLuint *values );

GLAPI void GLAPIENTRY glPixelMapusv( GLenum map, GLsizei mapsize,
                                     const GLushort *values );


GLAPI void GLAPIENTRY glGetPixelMapfv( GLenum map, GLfloat *values );

GLAPI void GLAPIENTRY glGetPixelMapuiv( GLenum map, GLuint *values );

GLAPI void GLAPIENTRY glGetPixelMapusv( GLenum map, GLushort *values );


GLAPI void GLAPIENTRY glBitmap( GLsizei width, GLsizei height,
                                GLfloat xorig, GLfloat yorig,
                                GLfloat xmove, GLfloat ymove,
                                const GLubyte *bitmap );


GLAPI void GLAPIENTRY glReadPixels( GLint x, GLint y,
                                    GLsizei width, GLsizei height,
                                    GLenum format, GLenum type,
                                    GLvoid *pixels );


GLAPI void GLAPIENTRY glDrawPixels( GLsizei width, GLsizei height,
                                    GLenum format, GLenum type,
                                    const GLvoid *pixels );


GLAPI void GLAPIENTRY glCopyPixels( GLint x, GLint y,
                                    GLsizei width, GLsizei height,
                                    GLenum type );


/*
 * Stenciling
 */

GLAPI void GLAPIENTRY glStencilFunc( GLenum func, GLint ref, GLuint mask );


GLAPI void GLAPIENTRY glStencilMask( GLuint mask );


GLAPI void GLAPIENTRY glStencilOp( GLenum fail, GLenum zfail, GLenum zpass );


GLAPI void GLAPIENTRY glClearStencil( GLint s );




/*
 * Texture mapping
 */

GLAPI void GLAPIENTRY glTexGend( GLenum coord, GLenum pname, GLdouble param );

GLAPI void GLAPIENTRY glTexGenf( GLenum coord, GLenum pname, GLfloat param );

GLAPI void GLAPIENTRY glTexGeni( GLenum coord, GLenum pname, GLint param );


GLAPI void GLAPIENTRY glTexGendv( GLenum coord, GLenum pname, const GLdouble *params );

GLAPI void GLAPIENTRY glTexGenfv( GLenum coord, GLenum pname, const GLfloat *params );

GLAPI void GLAPIENTRY glTexGeniv( GLenum coord, GLenum pname, const GLint *params );


GLAPI void GLAPIENTRY glGetTexGendv( GLenum coord, GLenum pname, GLdouble *params );

GLAPI void GLAPIENTRY glGetTexGenfv( GLenum coord, GLenum pname, GLfloat *params );

GLAPI void GLAPIENTRY glGetTexGeniv( GLenum coord, GLenum pname, GLint *params );



GLAPI void GLAPIENTRY glTexEnvf( GLenum target, GLenum pname, GLfloat param );

GLAPI void GLAPIENTRY glTexEnvi( GLenum target, GLenum pname, GLint param );


GLAPI void GLAPIENTRY glTexEnvfv( GLenum target, GLenum pname, const GLfloat *params );

GLAPI void GLAPIENTRY glTexEnviv( GLenum target, GLenum pname, const GLint *params );


GLAPI void GLAPIENTRY glGetTexEnvfv( GLenum target, GLenum pname, GLfloat *params );

GLAPI void GLAPIENTRY glGetTexEnviv( GLenum target, GLenum pname, GLint *params );



GLAPI void GLAPIENTRY glTexParameterf( GLenum target, GLenum pname, GLfloat param );

GLAPI void GLAPIENTRY glTexParameteri( GLenum target, GLenum pname, GLint param );


GLAPI void GLAPIENTRY glTexParameterfv( GLenum target, GLenum pname,
                                          const GLfloat *params );

GLAPI void GLAPIENTRY glTexParameteriv( GLenum target, GLenum pname,
                                          const GLint *params );


GLAPI void GLAPIENTRY glGetTexParameterfv( GLenum target,
                                           GLenum pname, GLfloat *params);

GLAPI void GLAPIENTRY glGetTexParameteriv( GLenum target,
                                           GLenum pname, GLint *params );


GLAPI void GLAPIENTRY glGetTexLevelParameterfv( GLenum target, GLint level,
                                                GLenum pname, GLfloat *params );

GLAPI void GLAPIENTRY glGetTexLevelParameteriv( GLenum target, GLint level,
                                                GLenum pname, GLint *params );



GLAPI void GLAPIENTRY glTexImage1D( GLenum target, GLint level,
                                    GLint internalFormat,
                                    GLsizei width, GLint border,
                                    GLenum format, GLenum type,
                                    const GLvoid *pixels );


GLAPI void GLAPIENTRY glTexImage2D( GLenum target, GLint level,
                                    GLint internalFormat,
                                    GLsizei width, GLsizei height,
                                    GLint border, GLenum format, GLenum type,
                                    const GLvoid *pixels );


GLAPI void GLAPIENTRY glGetTexImage( GLenum target, GLint level,
                                     GLenum format, GLenum type,
                                     GLvoid *pixels );



/* 1.1 functions */

GLAPI void GLAPIENTRY glGenTextures( GLsizei n, GLuint *textures );


GLAPI void GLAPIENTRY glDeleteTextures( GLsizei n, const GLuint *textures);


GLAPI void GLAPIENTRY glBindTexture( GLenum target, GLuint texture );


GLAPI void GLAPIENTRY glPrioritizeTextures( GLsizei n,
                                            const GLuint *textures,
                                            const GLclampf *priorities );


GLAPI GLboolean GLAPIENTRY glAreTexturesResident( GLsizei n,
                                                  const GLuint *textures,
                                                  GLboolean *residences );


GLAPI GLboolean GLAPIENTRY glIsTexture( GLuint texture );



GLAPI void GLAPIENTRY glTexSubImage1D( GLenum target, GLint level,
                                       GLint xoffset,
                                       GLsizei width, GLenum format,
                                       GLenum type, const GLvoid *pixels );



GLAPI void GLAPIENTRY glTexSubImage2D( GLenum target, GLint level,
                                       GLint xoffset, GLint yoffset,
                                       GLsizei width, GLsizei height,
                                       GLenum format, GLenum type,
                                       const GLvoid *pixels );



GLAPI void GLAPIENTRY glCopyTexImage1D( GLenum target, GLint level,
                                        GLenum internalformat,
                                        GLint x, GLint y,
                                        GLsizei width, GLint border );



GLAPI void GLAPIENTRY glCopyTexImage2D( GLenum target, GLint level,
                                        GLenum internalformat,
                                        GLint x, GLint y,
                                        GLsizei width, GLsizei height,
                                        GLint border );