lispbuilder-opengl/opengl/gl_1_1.lisp


(defcfun ("glRasterPos3f" glRasterPos3f) :void
  (x :float)
  (y :float)
  (z :float))

(defcfun ("glRasterPos3i" glRasterPos3i) :void
  (x :int)
  (y :int)
  (z :int))

(defcfun ("glRasterPos3s" glRasterPos3s) :void
  (x :short)
  (y :short)
  (z :short))

(defcfun ("glRasterPos4d" glRasterPos4d) :void
  (x :double)
  (y :double)
  (z :double)
  (w :double))

(defcfun ("glRasterPos4f" glRasterPos4f) :void
  (x :float)
  (y :float)
  (z :float)
  (w :float))

(defcfun ("glRasterPos4i" glRasterPos4i) :void
  (x :int)
  (y :int)
  (z :int)
  (w :int))

(defcfun ("glRasterPos4s" glRasterPos4s) :void
  (x :short)
  (y :short)
  (z :short)
  (w :short))

(defcfun ("glRasterPos2dv" glRasterPos2dv) :void
  (v :pointer))

(defcfun ("glRasterPos2fv" glRasterPos2fv) :void
  (v :pointer))

(defcfun ("glRasterPos2iv" glRasterPos2iv) :void
  (v :pointer))

(defcfun ("glRasterPos2sv" glRasterPos2sv) :void
  (v :pointer))

(defcfun ("glRasterPos3dv" glRasterPos3dv) :void
  (v :pointer))

(defcfun ("glRasterPos3fv" glRasterPos3fv) :void
  (v :pointer))

(defcfun ("glRasterPos3iv" glRasterPos3iv) :void
  (v :pointer))

(defcfun ("glRasterPos3sv" glRasterPos3sv) :void
  (v :pointer))

(defcfun ("glRasterPos4dv" glRasterPos4dv) :void
  (v :pointer))

(defcfun ("glRasterPos4fv" glRasterPos4fv) :void
  (v :pointer))

(defcfun ("glRasterPos4iv" glRasterPos4iv) :void
  (v :pointer))

(defcfun ("glRasterPos4sv" glRasterPos4sv) :void
  (v :pointer))

(defcfun ("glRectd" glRectd) :void
  (x1 :double)
  (y1 :double)
  (x2 :double)
  (y2 :double))

(defcfun ("glRectf" glRectf) :void
  (x1 :float)
  (y1 :float)
  (x2 :float)
  (y2 :float))

(defcfun ("glRecti" glRecti) :void
  (x1 :int)
  (y1 :int)
  (x2 :int)
  (y2 :int))

(defcfun ("glRects" glRects) :void
  (x1 :short)
  (y1 :short)
  (x2 :short)
  (y2 :short))

(defcfun ("glRectdv" glRectdv) :void
  (v1 :pointer)
  (v2 :pointer))

(defcfun ("glRectfv" glRectfv) :void
  (v1 :pointer)
  (v2 :pointer))

(defcfun ("glRectiv" glRectiv) :void
  (v1 :pointer)
  (v2 :pointer))

(defcfun ("glRectsv" glRectsv) :void
  (v1 :pointer)
  (v2 :pointer))

(defcfun ("glVertexPointer" glVertexPointer) :void
  (size :int)
  (type :unsigned-int)
  (stride :int)
  (ptr :pointer))

(defcfun ("glNormalPointer" glNormalPointer) :void
  (type :unsigned-int)
  (stride :int)
  (ptr :pointer))

(defcfun ("glColorPointer" glColorPointer) :void
  (size :int)
  (type :unsigned-int)
  (stride :int)
  (ptr :pointer))

(defcfun ("glIndexPointer" glIndexPointer) :void
  (type :unsigned-int)
  (stride :int)
  (ptr :pointer))

(defcfun ("glTexCoordPointer" glTexCoordPointer) :void
  (size :int)
  (type :unsigned-int)
  (stride :int)
  (ptr :pointer))

(defcfun ("glEdgeFlagPointer" glEdgeFlagPointer) :void
  (stride :int)
  (ptr :pointer))

(defcfun ("glGetPointerv" glGetPointerv) :void
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glArrayElement" glArrayElement) :void
  (i :int))

(defcfun ("glDrawArrays" glDrawArrays) :void
  (mode :unsigned-int)
  (first :int)
  (count :int))

(defcfun ("glDrawElements" glDrawElements) :void
  (mode :unsigned-int)
  (count :int)
  (type :unsigned-int)
  (indices :pointer))

(defcfun ("glInterleavedArrays" glInterleavedArrays) :void
  (format :unsigned-int)
  (stride :int)
  (pointer :pointer))

(defcfun ("glShadeModel" glShadeModel) :void
  (mode :unsigned-int))

(defcfun ("glLightf" glLightf) :void
  (light :unsigned-int)
  (pname :unsigned-int)
  (param :float))

(defcfun ("glLighti" glLighti) :void
  (light :unsigned-int)
  (pname :unsigned-int)
  (param :int))

(defcfun ("glLightfv" glLightfv) :void
  (light :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glLightiv" glLightiv) :void
  (light :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glGetLightfv" glGetLightfv) :void
  (light :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glGetLightiv" glGetLightiv) :void
  (light :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glLightModelf" glLightModelf) :void
  (pname :unsigned-int)
  (param :float))

(defcfun ("glLightModeli" glLightModeli) :void
  (pname :unsigned-int)
  (param :int))

(defcfun ("glLightModelfv" glLightModelfv) :void
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glLightModeliv" glLightModeliv) :void
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glMaterialf" glMaterialf) :void
  (face :unsigned-int)
  (pname :unsigned-int)
  (param :float))

(defcfun ("glMateriali" glMateriali) :void
  (face :unsigned-int)
  (pname :unsigned-int)
  (param :int))

(defcfun ("glMaterialfv" glMaterialfv) :void
  (face :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glMaterialiv" glMaterialiv) :void
  (face :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glGetMaterialfv" glGetMaterialfv) :void
  (face :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glGetMaterialiv" glGetMaterialiv) :void
  (face :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glColorMaterial" glColorMaterial) :void
  (face :unsigned-int)
  (mode :unsigned-int))

(defcfun ("glPixelZoom" glPixelZoom) :void
  (xfactor :float)
  (yfactor :float))

(defcfun ("glPixelStoref" glPixelStoref) :void
  (pname :unsigned-int)
  (param :float))

(defcfun ("glPixelStorei" glPixelStorei) :void
  (pname :unsigned-int)
  (param :int))

(defcfun ("glPixelTransferf" glPixelTransferf) :void
  (pname :unsigned-int)
  (param :float))

(defcfun ("glPixelTransferi" glPixelTransferi) :void
  (pname :unsigned-int)
  (param :int))

(defcfun ("glPixelMapfv" glPixelMapfv) :void
  (map :unsigned-int)
  (mapsize :int)
  (values :pointer))

(defcfun ("glPixelMapuiv" glPixelMapuiv) :void
  (map :unsigned-int)
  (mapsize :int)
  (values :pointer))

(defcfun ("glPixelMapusv" glPixelMapusv) :void
  (map :unsigned-int)
  (mapsize :int)
  (values :pointer))

(defcfun ("glGetPixelMapfv" glGetPixelMapfv) :void
  (map :unsigned-int)
  (values :pointer))

(defcfun ("glGetPixelMapuiv" glGetPixelMapuiv) :void
  (map :unsigned-int)
  (values :pointer))

(defcfun ("glGetPixelMapusv" glGetPixelMapusv) :void
  (map :unsigned-int)
  (values :pointer))

(defcfun ("glBitmap" glBitmap) :void
  (width :int)
  (height :int)
  (xorig :float)
  (yorig :float)
  (xmove :float)
  (ymove :float)
  (bitmap :pointer))

(defcfun ("glReadPixels" glReadPixels) :void
  (x :int)
  (y :int)
  (width :int)
  (height :int)
  (format :unsigned-int)
  (type :unsigned-int)
  (pixels :pointer))

(defcfun ("glDrawPixels" glDrawPixels) :void
  (width :int)
  (height :int)
  (format :unsigned-int)
  (type :unsigned-int)
  (pixels :pointer))

(defcfun ("glCopyPixels" glCopyPixels) :void
  (x :int)
  (y :int)
  (width :int)
  (height :int)
  (type :unsigned-int))

(defcfun ("glStencilFunc" glStencilFunc) :void
  (func :unsigned-int)
  (ref :int)
  (mask :unsigned-int))

(defcfun ("glStencilMask" glStencilMask) :void
  (mask :unsigned-int))

(defcfun ("glStencilOp" glStencilOp) :void
  (fail :unsigned-int)
  (zfail :unsigned-int)
  (zpass :unsigned-int))

(defcfun ("glClearStencil" glClearStencil) :void
  (s :int))

(defcfun ("glTexGend" glTexGend) :void
  (coord :unsigned-int)
  (pname :unsigned-int)
  (param :double))

(defcfun ("glTexGenf" glTexGenf) :void
  (coord :unsigned-int)
  (pname :unsigned-int)
  (param :float))

(defcfun ("glTexGeni" glTexGeni) :void
  (coord :unsigned-int)
  (pname :unsigned-int)
  (param :int))

(defcfun ("glTexGendv" glTexGendv) :void
  (coord :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glTexGenfv" glTexGenfv) :void
  (coord :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glTexGeniv" glTexGeniv) :void
  (coord :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glGetTexGendv" glGetTexGendv) :void
  (coord :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glGetTexGenfv" glGetTexGenfv) :void
  (coord :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glGetTexGeniv" glGetTexGeniv) :void
  (coord :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glTexEnvf" glTexEnvf) :void
  (target :unsigned-int)
  (pname :unsigned-int)
  (param :float))

(defcfun ("glTexEnvi" glTexEnvi) :void
  (target :unsigned-int)
  (pname :unsigned-int)
  (param :int))

(defcfun ("glTexEnvfv" glTexEnvfv) :void
  (target :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glTexEnviv" glTexEnviv) :void
  (target :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glGetTexEnvfv" glGetTexEnvfv) :void
  (target :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glGetTexEnviv" glGetTexEnviv) :void
  (target :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glTexParameterf" glTexParameterf) :void
  (target :unsigned-int)
  (pname :unsigned-int)
  (param :float))

(defcfun ("glTexParameteri" glTexParameteri) :void
  (target :unsigned-int)
  (pname :unsigned-int)
  (param :int))

(defcfun ("glTexParameterfv" glTexParameterfv) :void
  (target :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glTexParameteriv" glTexParameteriv) :void
  (target :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glGetTexParameterfv" glGetTexParameterfv) :void
  (target :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glGetTexParameteriv" glGetTexParameteriv) :void
  (target :unsigned-int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glGetTexLevelParameterfv" glGetTexLevelParameterfv) :void
  (target :unsigned-int)
  (level :int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glGetTexLevelParameteriv" glGetTexLevelParameteriv) :void
  (target :unsigned-int)
  (level :int)
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glTexImage1D" glTexImage1D) :void
  (target :unsigned-int)
  (level :int)
  (internalFormat :int)
  (width :int)
  (border :int)
  (format :unsigned-int)
  (type :unsigned-int)
  (pixels :pointer))

(defcfun ("glTexImage2D" glTexImage2D) :void
  (target :unsigned-int)
  (level :int)
  (internalFormat :int)
  (width :int)
  (height :int)
  (border :int)
  (format :unsigned-int)
  (type :unsigned-int)
  (pixels :pointer))

(defcfun ("glGetTexImage" glGetTexImage) :void
  (target :unsigned-int)
  (level :int)
  (format :unsigned-int)
  (type :unsigned-int)
  (pixels :pointer))

(defcfun ("glGenTextures" glGenTextures) :void
  (n :int)
  (textures :pointer))

(defcfun ("glDeleteTextures" glDeleteTextures) :void
  (n :int)
  (textures :pointer))

(defcfun ("glBindTexture" glBindTexture) :void
  (target :unsigned-int)
  (texture :unsigned-int))

(defcfun ("glPrioritizeTextures" glPrioritizeTextures) :void
  (n :int)
  (textures :pointer)
  (priorities :pointer))

(defcfun ("glAreTexturesResident" glAreTexturesResident) :unsigned-char
  (n :int)
  (textures :pointer)
  (residences :pointer))

(defcfun ("glIsTexture" glIsTexture) :unsigned-char
  (texture :unsigned-int))

(defcfun ("glTexSubImage1D" glTexSubImage1D) :void
  (target :unsigned-int)
  (level :int)
  (xoffset :int)
  (width :int)
  (format :unsigned-int)
  (type :unsigned-int)
  (pixels :pointer))

(defcfun ("glTexSubImage2D" glTexSubImage2D) :void
  (target :unsigned-int)
  (level :int)
  (xoffset :int)
  (yoffset :int)
  (width :int)
  (height :int)
  (format :unsigned-int)
  (type :unsigned-int)
  (pixels :pointer))

(defcfun ("glCopyTexImage1D" glCopyTexImage1D) :void
  (target :unsigned-int)
  (level :int)
  (internalformat :unsigned-int)
  (x :int)
  (y :int)
  (width :int)
  (border :int))

(defcfun ("glCopyTexImage2D" glCopyTexImage2D) :void
  (target :unsigned-int)
  (level :int)
  (internalformat :unsigned-int)
  (x :int)
  (y :int)
  (width :int)
  (height :int)
  (border :int))
